--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -2,11 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Elderly and children home management system",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "main": "server.js",
   "author": "Kavya Oneshi and Abhishek",
   "license": "ISC",
   "dependencies": {
@@ -19,6 +15,9 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
