--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,2 +1,2 @@
 PORT=8079
-MONGODB_URL=mongodb+srv://abhishekchitresena0707:<BqRP5V53v7VngOY8>@cluster0.h3iha.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://dulmioneshi2000:iXqOJ1AoHrBtRfZ9@cluster0.mwdrb.mongodb.net/
